[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speckle_pattern"
version = "1.3.2"

authors = [
        {name="Domen Gorjup, Janko Slavič, Miha Boltežar", email="janko.slavic@fs.uni-lj.si"},
]

description = "Generate print-ready pattern images for DIC applications."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["computer vision", "dic", "speckle pattern"]
license = "MIT"

packages = [
    { include = "speckle_pattern.speckle.py" },
]

classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Topic :: Scientific/Engineering',
        'Programming Language :: Python :: 3.10',
        "License :: OSI Approved :: MIT License",
]

dependencies = [
        'matplotlib>=2.0.0',
        'numpy>=1.0.0',
        'scipy>=1.0.0',
        'tqdm>=4.10.0',
        'imageio>=2.2.0',
        'piexif>=1.0.13'
]

[project.urls]
"Homepage" = "https://github.com/ladisk/speckle_pattern"
"Bug Tracker" = "https://github.com/ladisk/speckle_pattern/issues"